Update .gitignore to exclude additional IntelliJ files
Added entries to ignore Copilot plugin and copyright settings files generated by IntelliJ IDEA. This helps prevent unnecessary or sensitive files from being committed.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ bin/
 /src/test/resources/game.02.log
 /src/test/resources/game.01.log
 output
+/.idea/.copilot-plugin
+/.idea/copyright/profiles_settings.xml
+/.idea/copyright/GPLv3.xml
