Add checkstyleidea-libs/readme.txt to .gitignore
This update ensures that the specified readme.txt file is ignored by Git, preventing it from being committed accidentally. It improves repository cleanliness and avoids unnecessary file tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ output
 /.idea/.copilot-plugin
 /.idea/copyright/profiles_settings.xml
 /.idea/copyright/GPLv3.xml
+/.idea/checkstyleidea-libs/readme.txt
