Add /logs/sckillmonitor.log to .gitignore
This update excludes the sckillmonitor log file from version control. It ensures unnecessary log files are not accidentally committed.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ output
 /.idea/copyright/profiles_settings.xml
 /.idea/copyright/GPLv3.xml
 /.idea/checkstyleidea-libs/readme.txt
+/logs/sckillmonitor.log
