Remove unused GitLab issue templates and enhance JavaDocs
Deleted unnecessary GitLab issue and merge request templates to clean up the repository. Enhanced JavaDocs across multiple classes for better codebase documentation, including clarifying methods, parameters, and class functionality. These changes improve maintainability and readability while ensuring irrelevant files are purged.

Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@pm.me>

--- a/conveyor.conf
+++ b/conveyor.conf
@@ -2,7 +2,7 @@ include "#!./gradlew -q printConveyorConfig"
 
 app {
   display-name = SC Kill Monitor
-  vcs-url = "https://gitlab.com/flightsimtools/sc/sc-kill-monitor"
+  vcs-url = "https://github.com/greluc/SC-Kill-Monitor"
   site.base-url = "localhost:8899"
 }
 conveyor.compatibility-level = 16
