--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
+.idea
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -50,3 +51,4 @@ output
 /logs/sckillmonitor.log
 /.idea/git_toolbox_blame.xml
 /.idea/git_toolbox_prj.xml
+logs
