--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -15,7 +15,7 @@
 # GNU General Public License for more details.                                                     #
 #                                                                                                  #
 # You should have received a copy of the GNU General Public License                                #
-# along with SC Kill Monitor. If not, see <https://www.gnu.org/licenses/>.                         #
+# along with SC Kill Monitor. If not, see https://www.gnu.org/licenses/                            #
 ####################################################################################################
 
 appender.console.type=Console
@@ -23,12 +23,31 @@ appender.console.name=STDOUT
 appender.console.layout.type=PatternLayout
 appender.console.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-appender.file.type = File
-appender.file.name = LOGFILE
-appender.file.fileName=logs/sckillmonitor.log
-appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
-appender.file.filter.threshold.type = ThresholdFilter
-appender.file.filter.threshold.level = info
+#appender.file.type = File
+#appender.file.name = LOGFILE
+#appender.file.fileName=logs/sckillmonitor.log
+#appender.file.layout.type=PatternLayout
+#appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+#appender.file.filter.threshold.type = ThresholdFilter
+#appender.file.filter.threshold.level = info
 
-rootLogger=debug, STDOUT, LOGFILE
+# Rolling File Appender
+appender.rolling.type=RollingFile
+appender.rolling.name=DailyRollingFile
+appender.rolling.fileName=logs/sckillmonitor.log
+appender.rolling.filePattern=logs/sckillmonitor-%d{yyyy-MM-dd}.log
+
+# File Layout and Pattern
+appender.rolling.layout.type=PatternLayout
+appender.rolling.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+
+# File Rollover Policy for Daily Rotation
+appender.rolling.policies.type=Policies
+appender.rolling.policies.time.type=TimeBasedTriggeringPolicy
+appender.rolling.policies.time.interval=1
+appender.rolling.policies.time.modulate=true
+
+rootLogger.level=warn
+rootLogger.appenderRefs=stdout, dailyRolling
+rootLogger.appenderRef.stdout.ref=STDOUT
+rootLogger.appenderRef.dailyRolling.ref=DailyRollingFile
